fix: elevar z-index da secao ao abrir o modal para evitar sobreposicao

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,4 +50,8 @@ section {
   text-align: center;
   position: relative;
   z-index: 1;
+
+  &:has(.modal-overlay.open) {
+    z-index: 2100;
+  }
 }
